Update template body format.
1. 关键词分隔改为分号；
2. 关键词与摘要的间隔改为1行
3. 调整Chapter上下间距；
4. 设置三线表的分割线宽度.

--- a/yanputhesis-sample.tex
+++ b/yanputhesis-sample.tex
@@ -126,14 +126,14 @@
     文档类模板．使用者无需额外修改格式控制细节，直接在所发布的样例基础上，修改章
     节标题，撰写内容，即可完成毕业设计论文任务．            %
     \begin{keywords}                                        % 中文关键词开始
-        学位论文，模板，\LaTeX                              %
+        学位论文；模板；\LaTeX                              %
     \end{keywords}                                          % 中文关键词结束
 \end{abstract}                                              % 中文摘要结束
 %%-----------------------------------------------------------------------------%
 \begin{engabstract}                                         % 英文摘要开始
     \noindent \blindtext                                    %
     \begin{engkeywords}                                     % 英文关键词开始
-        thesis, template, \LaTeX                            %
+        thesis; template; \LaTeX                            %
     \end{engkeywords}                                       % 英文关键词结束
 \end{engabstract}                                           % 英文摘要结束
 %%-----------------------------------------------------------------------------%
@@ -374,6 +374,7 @@ int main()
 %%-----------------------------------------------------------------------------%
 \end{document}
 %%=============================================================================%
+
 
 %% 
 %% This work consists of the file  yanputhesis.dtx
