--- a/yanputhesis.dtx
+++ b/yanputhesis.dtx
@@ -719,7 +719,7 @@ int main()
     \sHgXiaosi\thesubsection}{0.5em}{}{}                    %
 \titleformat{\subsubsection}[hang]{\fHei\bf}{               % 小标题: (4) 标题
     (\arabic{subsubsection})}{0.5em}{}{}                    %
-\titlespacing{\chapter}{0pt}{-8pt}{11pt}                    % 缩小标题之间缩进
+\titlespacing{\chapter}{0pt}{-2pt}{14pt}                    % 缩小标题之间缩进
 \titlespacing{\section}{0pt}{7pt}{0em}                      %
 \titlespacing{\subsection}{0pt}{6.5pt}{0em}                 %
 \titlespacing{\subsubsection}{0pt}{0.25em}{0pt}             %
@@ -808,6 +808,8 @@ int main()
 \newcolumntype{P}[1]{>{\raggedright\let\newline\\%          % 指定宽度左对齐
     \arraybackslash\hspace{0pt}}p{#1}}                      %
 \renewcommand{\arraystretch}{1.4}                           % 表格行高为 1.4 倍
+\setlength\heavyrulewidth{1.5pt}                            % 表格上下线宽 1.5 磅
+\setlength\lightrulewidth{1pt}                              % 表格中线宽 1.0 磅
 %%-----------------------------------------------------------------------------%
 %    \end{macrocode}
 % \markdtxchanges{v1.7.0}{2022/10/31}{更新定理环境格式以及证毕符号}
@@ -1263,7 +1265,7 @@ int main()
     \markboth{摘{\quad}要}{摘{\quad}要}                     %
 }{\vfill\sWuhao \noindent \nwpu@chs@funding \par \cleardoublepage}
 \newenvironment{keywords}{                                  %
-    \vspace{2\baselineskip} \par                            %
+    \vspace{1\baselineskip} \par                            %
     \noindent \textbf{关键词：}\quad}{}                     %
 %%-----------------------------------------------------------------------------%
 %% 英文摘要及关键词
@@ -1274,7 +1276,7 @@ int main()
     \markboth{Abstract}{ABSTRACT}                           %
 }{\vfill\sWuhao \noindent \nwpu@eng@funding \par \cleardoublepage}        %
 \newenvironment{engkeywords}{                               %
-    \vspace{2\baselineskip} \par                            %
+    \vspace{1\baselineskip} \par                            %
     \noindent \textbf{Key Words:}\quad}{}                   %
 %%=============================================================================%
 %    \end{macrocode}
@@ -1447,4 +1449,5 @@ int main()
 %    \end{macrocode}
 
 % \Finale
+
 \endinput
