--- a/yanputhesis-sample.tex
+++ b/yanputhesis-sample.tex
@@ -6,7 +6,7 @@
 %%
 %% yanputhesis.dtx  (with options: `sample')
 %% Copyright (C) 2022 by Shangkun Shen
-%%
+%% 
 %% It may be distributed and/or modified under the conditions of the LaTeX
 %% Project Public License, either version 1.3b of this license or (at your
 %% option) any later version. The latest version of this license is in
@@ -106,7 +106,7 @@
 \date{2022年6月}{Jun 2022}                                  % 答辩日期
 \school{数学与统计学院}{School of Mathematics and Statistics}% 学院
 \major{数学}{Philosophy in Mathematics}                     % 专业 博士请添加 Ph
-\advisor{李四海{\enspace}教授}{Sihai Li}                    % 导师
+\advisor{李四海 \enspace 教授}{Sihai Li}                    % 导师
 \studentnumber{2016123456}                                  % 学号
 \funding{本研究得到玄学基金（编号23336666）资助。}{         % 基金资助
     The present work is supported by Funding of Metaphysics %
@@ -376,11 +376,11 @@ int main()
 %%=============================================================================%
 
 
-%%
+%% 
 %% This work consists of the file  yanputhesis.dtx
 %% and the derived files           yanputhesis.ins,
 %%                                 yanputhesis.pdf,
 %%                                 yanputhesis.cls.
-%%
+%% 
 %%
 %% End of file `yanputhesis-sample.tex'.
