--- a/yanputhesis.dtx
+++ b/yanputhesis.dtx
@@ -90,7 +90,7 @@ and the derived files           yanputhesis.ins,
 %<class>\NeedsTeXFormat{LaTeX2e}[2005/12/01]
 %<class>\ProvidesClass{yanputhesis}
 %<*class>
-    [2022/12/05 v1.8.1 Yet Another NPU Thesis Template]
+    [2022/12/07 v1.8.2 Yet Another NPU Thesis Template]
 %</class>
 %
 %<*driver>
@@ -253,7 +253,7 @@ and the derived files           yanputhesis.ins,
 \date{2022年6月}{Jun 2022}                                  % 答辩日期
 \school{数学与统计学院}{School of Mathematics and Statistics}% 学院
 \major{数学}{Philosophy in Mathematics}                     % 专业 博士请添加 Ph
-\advisor{李四海{\enspace}教授}{Sihai Li}                    % 导师
+\advisor{李四海 \enspace 教授}{Sihai Li}                    % 导师
 \studentnumber{2016123456}                                  % 学号
 \funding{本研究得到玄学基金（编号23336666）资助。}{         % 基金资助
     The present work is supported by Funding of Metaphysics %
@@ -885,7 +885,10 @@ int main()
     \setlength{\belowdisplayskip}{0pt}                      %
     \setlength{\abovedisplayshortskip}{0pt}                 %
     \setlength{\belowdisplayshortskip}{0pt}}                %
-\theoremsymbol{\ensuremath{\square}                         % 证明环境 囗
+%    \end{macrocode}
+% \markdtxchanges{v1.8.2}{2022/12/07}{修复证明环境}
+%    \begin{macrocode}
+{\theoremsymbol{\ensuremath{\square}}                       % 证明环境 囗
 \if@npu@lang@chs\newtheorem*{proof}{证明}\else\newtheorem*{proof}{Proof}\fi}
 \newcommand{\qedinEquation}{{\rlap{$\qquad\square$}}}       % 公式中添加证毕符号
 \if@npu@lang@chs                                            % 定制中文定理环境
@@ -1237,7 +1240,7 @@ int main()
             \bf 申{\enspace}请{\enspace}日{\enspace}期}{    %
             \uline{\hfill \makebox{\bf \nwpu@chs@date} \hfill}}
         \end{minipage}                                      % 排版结束
-        \vspace{2.5\baselineskip}                           % => 2.5 * 24pt * 1.25
+        \vspace{2.5\baselineskip}                           % 2.5 * 24pt * 1.25
     \end{center}                                            %
 \end{titlepage} \fSong \normalsize \newpage \clearpage      %
 }                                                           %
@@ -1567,12 +1570,15 @@ int main()
         数据库进行检索，可以采用影印、缩印或扫描等复制手段保存和汇编本学位论文。同时本人
         保证，毕业后结合学位论文研究课题再撰写的文章一律注明作者单位为西北工业大学。\par
         {\qquad}本学位论文属于（在以下方框内打“√”）：\par
-        {\qquad}$\square$\hspace*{0.7em}保密论文，保密期（\hspace*{2.5em}年\hspace*{2.5em}月\hspace*{2.5em}日至\hspace*{2.5em}年\hspace*{2.5em}月\hspace*{2.5em}日）。\par
+        {\qquad}$\square$\hspace*{0.7em}保密论文，保密期
+        （\hspace*{2.5em}年\hspace*{2.5em}月\hspace*{2.5em}日
+        至\hspace*{2.5em}年\hspace*{2.5em}月\hspace*{2.5em}日）。\par
         {\qquad}$\square$\hspace*{0.7em}公开论文。\par
         {\qquad}~\par
-        {\qquad}学位论文作者签名{~:~}\underline{\qquad\qquad\qquad} \hfill
-        指导教师签名{~:~}\underline{\qquad\qquad\qquad} \par
-        \hspace*{8em}{年\hspace*{1.5em}月\hspace*{1.5em}日} \hfill\hspace*{12em} {年\hspace*{1.5em}月\hspace*{1.5em}日}\hspace*{1.5em}\par
+        {\qquad}学位论文作者签名{~:~}\underline{\qquad\qquad\qquad}\hfill
+        指导教师签名{~:~}\underline{\qquad\qquad\qquad}\par
+        \hspace*{8em}{年\hspace*{1.5em}月\hspace*{1.5em}日}\hfill
+        \hspace*{12em}{年\hspace*{1.5em}月\hspace*{1.5em}日}\hspace*{1.5em}\par
         {\qquad}~\par
         \vspace*{2.1mm}
         \hbox to \hsize{\leaders\hbox to 0.6em{\hss--\hss}\hfill} \par
@@ -1595,7 +1601,7 @@ int main()
             \vspace*{1.5mm}
             \hspace*{21em}\hfill 学位论文作者签名{~:~}\underline{\qquad\qquad\quad}\par
             \vspace*{2mm}
-            \hspace*{10em}\hfill {年\hspace*{1.5em}月\hspace*{1.5em}日}\hspace*{1.5em}
+            \hspace*{10em}\hfill{年\hspace*{1.5em}月\hspace*{1.5em}日}\hspace*{1.5em}
         \end{minipage}
     \end{minipage}
 \end{titlepage}
